# FPGBC

./: .gitignore  README.md  pyproject.toml
fpga/template/: top.pcf  top.v
hardware/: README.md
hardware/pcb/: .gitignore
hardware/pcb/lib/mod/: D_SOD-963.kicad_mod  GB-CardEdge.kicad_mod  LED_0603_1608Metric_Castellated.kicad_mod  MJ-8435.kicad_mod  PinHeader_1x10_P2.54_Sidemount.kicad_mod  PinSocket_1x10_P2.54_Sidemount.kicad_mod  SO-5_4.4x3.6mm_P1.27mm.kicad_mod  VSSOP-8_2.3x2mm_P0.5mm.kicad_mod  ZX62R-B-5P.kicad_mod
hardware/pcb/lib/sym/: GB-CardEdge.kicad_sym  HN4A56JU.kicad_sym  TC74LCXR163245FT.kicad_sym  TC7WZ07FK.kicad_sym  TLP2368.kicad_sym  TPS79901DDCR.kicad_sym
hardware/pcb/main/: fabrication-toolkit-options.json  fp-lib-table  sym-lib-table  tGB-main.kicad_pcb  tGB-main.kicad_pro  tGB-main.kicad_sch
hardware/pcb/main/production/: netlist.ipc
tools/: argparse_tree.py  carttool.py  combine_bit_and_rom.sh  spi_flash.py  types.py
