[project]
name = "fpgbc-carttool"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "mcp2210-python>=1.0.8",
    "tqdm>=4.68.3",
]

[project.scripts]
carttool = "tools.carttool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/"]
